--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -11,3 +11,4 @@ include bcdi/preprocessing/alias_dict_2018.txt
 include bcdi/preprocessing/alias_dict_2019.txt
 include bcdi/preprocessing/alias_dict_2020.txt
 include bcdi/preprocessing/alias_dict_2021.txt
+include tests/postprocessing/3572_fa.vtk
